--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700');
+
+
 .App {
   text-align: center;
+  font-family: 'Raleway', sans-serif;
+  color: #575757;
 }
 
 .App-logo {
